[gd_scene load_steps=7 format=3 uid="uid://muojd5dgpyau"]

[ext_resource type="PackedScene" uid="uid://d1qs8nf0s0y85" path="res://objects/general_ui/ui_panel/ui_panel.tscn" id="1_cjfis"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="2_2go33"]
[ext_resource type="Script" uid="uid://3u6hgk8yjcjd" path="res://scenes/title_screen/release_notes/release_notes_panel.gd" id="2_6i2ap"]
[ext_resource type="Theme" uid="uid://dhqxwi6busihb" path="res://objects/general_ui/settings_menu/slider_theme.tres" id="3_l8nkk"]
[ext_resource type="Theme" uid="uid://cr4dpunodqkjk" path="res://scenes/title_screen/release_notes/dropdown_theme.tres" id="5_dngbr"]

[sub_resource type="LabelSettings" id="LabelSettings_doejf"]
font = ExtResource("2_2go33")
font_size = 40
font_color = Color(5.96821e-06, 0.752916, 0.870809, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="ReleaseNotesPanel" instance=ExtResource("1_cjfis")]
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
pivot_offset = Vector2(300, 300)
script = ExtResource("2_6i2ap")
title = "Release Notes"

[node name="Panel" parent="." index="0"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
pivot_offset = Vector2(300, 300)

[node name="Title" parent="Panel" index="0"]
offset_top = 47.0
offset_bottom = 93.0
text = "Release Notes"
label_settings = SubResource("LabelSettings_doejf")

[node name="Body" parent="Panel" index="1"]
visible = false

[node name="CancelButton" parent="Panel" index="2"]
hover_db_offset = 6.0
press_db_offset = 0.0

[node name="Scroller" type="ScrollContainer" parent="Panel" index="3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -170.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l8nkk")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Scroller" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="ReleasesContainer" type="VBoxContainer" parent="Panel/Scroller/MarginContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="ReleasesDropdown" type="OptionButton" parent="Panel" index="4"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 93.0
offset_right = 70.0
offset_bottom = 123.0
grow_horizontal = 2
theme = ExtResource("5_dngbr")

[connection signal="item_selected" from="Panel/ReleasesDropdown" to="." method="select_entry"]
